Corrected font sizes on mobile for main articles and changed name of link

--- a/main.css
+++ b/main.css
@@ -135,7 +135,34 @@
   }
 
   @media screen and (max-width: 500px) {
+    body, html {
+        margin: 0;
+        padding: 0;
+    
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        line-height: 1.50;
+        letter-spacing: 1.05%;
+    }
+
+    ul li a {
+        font-size: 14px;
+    }
+
+
+
     .column-layout {
         padding: 5px 10px;
-      }
+    }
+
+    body {
+        padding: 0px 0px;
+    } 
+
+    #carouselExampleIndicators {
+        max-width: 400px;
+        max-height: 200px;
+        margin: auto;
+        overflow: hidden;
+    }
   }
